--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "dgram": "^1.0.1"
+    "dgram": "^1.0.1",
+    "hyperdht": "^6.20.1",
+    "node-stun": "^0.1.2"
   },
   "scripts": {
     "middleman": "nodemon middleman.js"
